--- a/Assets/_Project/Scripts/Gameplay/Source.Gameplay.asmdef
+++ b/Assets/_Project/Scripts/Gameplay/Source.Gameplay.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6f2c49995eb62a743a738675c23a454b",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
